* Fixed clicking in the header of the favorite hubs list view (poy)
* Update to ADC 0.14
* Fixed pressing enter in the notepad (poy)
* Fixed user commands params (poy)
* Readded list view double buffering (thanks poy)
* Fixed some msvc compile issues (thanks james ross)
* Fixed key handling in file listings (poy)
* Message always focused first in chats (poy)

-- 0.703 2007-11-08 --
* Fixed invalid strings (thanks james ross)
* Reverted initial anti-flicker (needs rethinking)
* Fixed some memory leaks
* Fixed background color in settings dialog example (thanks poy)
* Fixed disappearing tooltips (thanks poy)
* Stats frame work (thanks poy)
* Appearance page font cleanup (thanks poy)
* Context menu fix (thanks poy)
* Magnet dialog fixed (thanks poy)
* Reorder some options (thanks poy)
* Allow files with $ in them (thanks ullner)
* Fixed splitter resizing
* Fixed average download speed
* Removed test entries from finished frames
* Fixed an issue with multisource downloads
* Fixed missing hubs on pub hubs reopen
* Fixed crash on setting priority on running item
* Fixed issue adc connectivity when starting for the first time
* Fixed average overall transfer speed in main status bar
* Removed max tab rows setting, won't be implemented in the near future
* Fixed text not being displayed when opening private chat
* Fixed initial focus issues
* Fixed search on enter
* Fixed window activation on toolbar click
* Fixed spyframe crash
* Fixed /fav info (thanks ullner)

-- 0.702 2007-10-21 --
* Fixed missing sorting in most places
* Fixed crash on startup when missing Certificates folder
* Fixed right-click menu with nested user commands
* Added expiry check to certificate regeneration
* Readded splash screen
* Readded sfv check (always done at end of download due to segmented downloading)

-- 0.701 2007-10-18 --
* Fixed an upload bug
* Reworked some context menu stuff
* Replaced yassl with OpenSSL, SSL certs no longer require external OpenSSL application